TLS-Offloading-and-Load-Balancer/mc/templates/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-staging-issuer"
spec:
  tls:
    - hosts:
        - localhost.s7em.com
      secretName: tls-secret-staging
  rules:
    - host: localhost.s7em.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-web-app-service
                port:
                  number: 8080
